Implemented REST fake GET /tws/v1/applications/{app}/tasks/{task}/measurement